@@ -1,7 +1,5 @@
 * : Solve the problem of possible multiple sleep requests between us and the session manager.
 
-* : OnLowBattery DBus signals (currently there is only OnBattery DBus signal).
-
 * : Support Suspend Hybrid! ( DeviceKit power will not support this! ).
     
 * : Translations need to be updated.
